<resources>
    <string name="app_name">DoctorHow</string>
    <string name="first_txt">First</string>
    <string name="last_txt">Last</string>
    <string name="email_txt">Email</string>
    <string name="phone_txt">Phone</string>
    <string name="password_txt">Password</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="user_first_name_ph">USER FIRST NAME</string>
    <string name="user_last_name_ph">USER LAST NAME</string>
    <string name="user_email_ph">USER EMAIL</string>
    <string name="user_password_ph">USER Password</string>
    <string name="update_info_button">Update info</string>
    <string name="logout_button">Logout</string>
    <string name="title_txt">Title</string>
    <string name="description_txt">Description</string>
    <string name="call_clinic_button">Call clinic</string>
    <string name="email_clinic_button">Email clinic</string>
    <string name="remove_favorite_button">Remove favorite</string>
    <string name="add_favorite_button">Add to favorites</string>
    <string name="remove_button">Remove</string>
    <string name="show_password_txt">Show Password</string>
    <string name="login_button">LogIn</string>
    <string name="register_button">Register</string>
    <string name="pick_images_button">Pick images</string>
    <string name="finish_button">Finish</string>
    <string name="doctor_code_txt">Doctor code (optional)</string>
    <string name="create_account">Create account</string>
    <string name="back_button">Back</string>
    <string name="owner_ph">Owner</string>
    <string name="address_text">Address</string>

    <string name="google_API_key">AIzaSyDky3pHYUvLKNzD8iW9jIA3lpAtz582L8g</string>

</resources>
