<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white"

    tools:context=".Fragments.NewListingFragment">

   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent">

       <EditText
           android:id="@+id/new_listing_title"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:backgroundTint="@color/appColor"
           android:layout_margin="@dimen/login_layout_margin"
           android:hint="@string/title_txt"
           app:layout_constraintTop_toTopOf="parent"
           app:layout_constraintLeft_toLeftOf="parent"
           app:layout_constraintRight_toRightOf="parent"
           android:textSize="@dimen/big_text_size" />

       <EditText
           android:id="@+id/new_listing_phone"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:backgroundTint="@color/appColor"
           android:layout_margin="@dimen/login_layout_margin"
           android:hint="@string/phone_txt"
           app:layout_constraintTop_toBottomOf="@id/new_listing_title"
           app:layout_constraintLeft_toLeftOf="parent"
           app:layout_constraintRight_toRightOf="parent"
           android:textSize="@dimen/default_text_size" />

       <EditText
           android:id="@+id/new_listing_details"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:backgroundTint="@color/appColor"
           android:layout_margin="@dimen/login_layout_margin"
           android:hint="@string/description_txt"
           app:layout_constraintTop_toBottomOf="@id/new_listing_phone"
           app:layout_constraintLeft_toLeftOf="parent"
           app:layout_constraintRight_toRightOf="parent"
           android:textSize="@dimen/default_text_size" />

       <Button
           android:id="@+id/new_listing_images_btn"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_margin="@dimen/default_margin"
           android:text="@string/pick_images_button"
           android:background="@drawable/custom_button"
           android:elevation="@dimen/default_elevation"
           android:padding="@dimen/medium_padding"
           android:textColor="@android:color/white"
           app:layout_constraintTop_toBottomOf="@id/new_listing_details"
           app:layout_constraintLeft_toLeftOf="parent"
           app:layout_constraintRight_toRightOf="parent" />

       <com.google.android.material.floatingactionbutton.FloatingActionButton
           android:id="@+id/floating_button_finish"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="end|bottom"
           android:backgroundTint="@color/appColor"
           android:src="@drawable/ic_finish_listing"
           android:contentDescription="@string/finish_button"
           android:layout_margin="@dimen/default_margin"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintRight_toRightOf="parent"
           />



   </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>