<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/appColor"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    tools:context=".Fragments.ListingFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/listing_images"
            android:layout_width="match_parent"
            android:layout_height="@dimen/listing_image_height"
            app:layout_constraintBottom_toTopOf="@id/listing_title"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"

            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/listing_line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_view_height"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
            android:background="@android:color/white"
            app:layout_constraintTop_toBottomOf="@id/listing_phone"
            app:layout_constraintBottom_toTopOf="@id/listing_description"/>

        <TextView
            android:id="@+id/listing_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/default_padding"
            android:text="@string/title_txt"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginRight="@dimen/default_margin"
            android:textColor="@android:color/white"
            android:textSize="@dimen/big_text_size"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintBottom_toTopOf="@id/listing_phone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/listing_images" />

        <TextView
            android:id="@+id/listing_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/phone_txt"
            android:layout_marginStart="@dimen/default_margin"
            android:clickable="true"
            android:textColor="@color/phoneNumberColor"
            android:textSize="@dimen/small_text_size"
            app:layout_constraintTop_toBottomOf="@id/listing_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@id/listing_line"
            app:layout_constraintRight_toLeftOf="@id/listing_email"
            />

        <TextView
            android:id="@+id/listing_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/default_margin"
            android:text="@string/email_txt"
            android:clickable="true"
            android:textColor="@color/phoneNumberColor"
            android:textSize="@dimen/small_text_size"
            app:layout_constraintTop_toBottomOf="@id/listing_title"
            app:layout_constraintLeft_toRightOf="@id/listing_phone"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/listing_line"
            />

        <TextView
            android:id="@+id/listing_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
            android:text="@string/description_txt"
            android:textSize="@dimen/small_text_size"
            android:padding="@dimen/default_padding"
            android:textColor="@android:color/white"
            app:layout_constraintTop_toBottomOf="@id/listing_line"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/listing_call_button"

            />

        <Button
            android:id="@+id/listing_call_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:background="@drawable/call_now_button"
            android:paddingLeft="@dimen/big_padding"
            android:paddingRight="@dimen/big_padding"
            android:text="@string/call_clinic_button"
            android:textColor="@android:color/white"
            app:layout_constraintTop_toBottomOf="@id/listing_description"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/listing_email_button"
            app:layout_constraintBottom_toTopOf="@id/listing_favorite_button" />

        <Button
            android:id="@+id/listing_email_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:background="@drawable/call_now_button"
            android:paddingLeft="@dimen/big_padding"
            android:paddingRight="@dimen/big_padding"
            android:text="@string/email_clinic_button"
            android:textColor="@android:color/white"
           app:layout_constraintLeft_toRightOf="@id/listing_call_button"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/listing_description"
            app:layout_constraintBottom_toTopOf="@id/listing_favorite_button"
            />

        <Button
            android:id="@+id/listing_favorite_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/big_padding"
            android:paddingRight="@dimen/big_padding"
            android:background="@drawable/custom_favorites_button"
            android:text="@string/add_favorite_button"
            android:textColor="@color/appColor"
            app:layout_constraintTop_toBottomOf="@id/listing_call_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/listing_remove_button" />

        <Button
            android:id="@+id/listing_remove_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:background="@drawable/custom_logout_button"
            android:paddingLeft="@dimen/big_padding"
            android:paddingRight="@dimen/big_padding"
            android:text="@string/remove_button"
            android:textColor="@android:color/white"
            app:layout_constraintTop_toBottomOf="@id/listing_favorite_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>